rust/src/openvasd/api_tests/snapshots/scans_error_handling POST __scans_duplicate_id.snap
---
source: src/openvasd/api_tests/test_builder.rs
expression: inner
---
{
  "status_code": 409,
  "headers": {
    "api-version": "1",
    "authentication": "disabled",
    "content-length": "64",
    "content-type": "application/json",
    "date": "[redacted]",
    "feed-version": "[redacted]",
  },
  "body": "{\"status\":409,\"message\":\"Scan ID already in use\",\"details\":null}",
}
